# cosmic_ray_stand_toymc

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt  run_toymc.sh
configs/: RPC.yaml  example.yaml  example_beam.yaml  example_cosmic.yaml  example_cosmic_systerrors.yaml  example_object.yaml
docs/: desiderata.md  plan.md  plan_GUI.md  plan_engine.md
docs/human/: desiderata.md  plan_GUI.md
docs/truthfiles/: functions.md  goal.md  invariants.md  structure.md
scripts/: gen_function_truthfile.py  run_toymc.py
src/toymc_cosmic/: __init__.py  angular.py  cli.py  config.py  geometry.py  geometry_systematics.py  logic.py  rates.py  response.py  simulation.py  source.py  tracks.py
src/toymc_cosmic/gui/: __init__.py  buttons.py  config.py  event_state.py  layout.py  legend.py  scene.py  track_bounds.py  viewer.py
tests/: test_angular.py  test_cli.py  test_config.py  test_geometry.py  test_geometry_systematics.py  test_gui_buttons.py  test_gui_config.py  test_gui_event_state.py  test_gui_legend.py  test_gui_scene.py  test_gui_track_bounds.py  test_gui_viewer.py  test_logic.py  test_rates.py  test_response.py  test_simulation.py  test_source.py  test_tracks.py
